// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Systems Container > renders root systems correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-10klw3m"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-15vbc7x-MuiGrid-root"
    >
      <div
        style="display: flex; align-items: center; padding-top: 20px; padding-bottom: 20px;"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <span
            aria-label="Systems Home"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              aria-label="navigate to systems home"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="HomeIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </span>
          <nav
            aria-label="breadcrumb"
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1mc59t7-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Systems Container > renders units breadcrumbs correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-10klw3m"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-15vbc7x-MuiGrid-root"
    >
      <div
        style="display: flex; align-items: center; padding-top: 20px; padding-bottom: 20px;"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <span
            aria-label="Systems Home"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              aria-label="navigate to systems home"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="HomeIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </span>
          <nav
            aria-label="breadcrumb"
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1mc59t7-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <div
                  class="MuiBox-root css-8zy5qf"
                />
              </li>
              <li
                aria-hidden="true"
                class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                  data-testid="NavigateNextIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </li>
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  aria-label="Giant laser"
                  class="MuiTypography-root MuiTypography-body1 css-1qs6ojv-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Giant laser
                </p>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
